[project]
name = "iota-mcp"
version = "0.1.0"
description = "MCP server for Islands on the Air — group lookup, island search, DXCC mapping"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Greg Beam, KI7MT", email = "ki7mt@yahoo.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0",
]
keywords = [
    "amateur-radio", "ham-radio", "iota", "islands-on-the-air",
    "mcp", "model-context-protocol", "dxcc", "islands",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Ham Radio",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://qso-graph.io"
Documentation = "https://qso-graph.io"
Repository = "https://github.com/qso-graph/iota-mcp"
Issues = "https://github.com/qso-graph/iota-mcp/issues"

[project.scripts]
iota-mcp = "iota_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iota_mcp"]
